--- a/demo/src/main/resources/application.yaml
+++ b/demo/src/main/resources/application.yaml
@@ -1,7 +1,6 @@
 #spring.application.name=demo
 server:
 #  port: 8080
-  port: 8080
   servlet:
     context-path: /zotri
     encoding:
@@ -13,11 +12,15 @@ server:
 
 spring:
   datasource:
-#    url: "jdbc:mysql://localhost:3306/zotriversedb"
-    url: "jdbc:mysql://mysql-9:3306/zotriversedb"
-    driverClassName: "com.mysql.cj.jdbc.Driver"
-    username: root
-    password: 12345
+# #    url: "jdbc:mysql://localhost:3306/zotriversedb"
+#     url: "jdbc:mysql://mysql-9:3306/zotriversedb"
+#     driverClassName: "com.mysql.cj.jdbc.Driver"
+#     username: root
+#     password: 12345
+    url: jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3307}/${DATABASE_NAME:zotriversedb}
+    username: ${DATABASE_USER:root}
+    password: ${DATABASE_PASSWORD:admin!@#}
+    driver-class-name: com.mysql.cj.jdbc.Driver
   config:
     import: classpath:env.properties
 
